--- a/index.html
+++ b/index.html
@@ -35,8 +35,13 @@
             </p>
         </div>
         <form action="#" method="post" class="newsletter">
-            <input type="email" placeholder="Email Address">
-            <button type="submit">
+            <input
+                type="email"
+                name="email"
+                placeholder="Email Address">
+            <button
+                name="submit"
+                type="submit">
                 <svg xmlns="http://www.w3.org/2000/svg" width="12" height="20"><path fill="none" stroke="#FFF" stroke-width="2" d="M1 1l8.836 8.836L1 18.671"/></svg>
             </button>
         </form>
