--- a/index.html
+++ b/index.html
@@ -38,10 +38,13 @@
             <input
                 type="email"
                 name="email"
+                title="Enter your email address"
                 placeholder="Email Address">
             <button
                 name="submit"
-                type="submit">
+                type="submit"
+                title="Send your email address"
+                >
                 <svg xmlns="http://www.w3.org/2000/svg" width="12" height="20"><path fill="none" stroke="#FFF" stroke-width="2" d="M1 1l8.836 8.836L1 18.671"/></svg>
             </button>
         </form>
